# okx

./: .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  Dockerfile  docker-compose.yml  requirements.txt  version.md
.opencode/: opencode.json
.opencode/knowledge-base/: ai-collaboration.md  ai-development-sop.md  docker.md  execution-architecture.md  project-structure-plan.md  project.md
ai_runtime/: README.md  TASKS.md  backend_flow_state_tasks.md
ai_runtime/mcp/: README.md  pyproject.toml
ai_runtime/mcp/ai_ouyi_mcp/: __init__.py  client.py  schemas.py  server.py
ai_runtime/mcp/system_gaps/: 20260526-215634_workflow_and_cleanup_apis_missing_for_ai_runtime_smoke.json
ai_runtime/mcp/tests/: test_client.py
backtest/: custom_backtest.py  multi_trend_backtest.py  vbt_backtest.py
config/: config.json  strategy_config.json
docs/: scalping.md
docs/tasks/: TASKS.md  (+4 more)
execution/: AGENTS.md
freqtrade_bot/: realtime_bot.py
research/: AGENTS.md
strategies/: 3多空切换.md  AGENTS.md  EMA + RSI 动量剥头皮Momentum Scalping.md  README.md  STRATEGY_LIFECYCLE.md  auto_grid_ls_v1.json  auto_grid_ls_v1.py  auto_grid_ls_v1_tight.py  auto_grid_ls_v1_wide.json  auto_multi_ls_v2.json  auto_multi_ls_v2.py  auto_multi_ls_v3.json  auto_scalping_v1.json  btc_donchian_trend_strategy.json  btc_donchian_trend_strategy.py  btc_regime_pullback_strategy.json  btc_regime_pullback_strategy.py  cli.py  emarsi_momentum_scalping.py  funding_rate_utils.py  multi_ls_strategy.json  multi_ls_strategy.py  volume_ratio_strategy.py
tests/: test_runtime_service.py
web/: README.md  start_web.sh
(+248 files in other folders)
